<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_do_produto"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/txt_descr_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_a_descricao"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/txt_preco_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_preco"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estoque"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/txt_estoque_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_a_quantidade_em_estoque"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setor"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinner_setor_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_confirmar_produto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar"
            android:onClick="confirmar"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_voltar_produto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="voltar"
            android:text="@string/voltar"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lista_produtos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_editar_produto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editar"
            android:onClick="editar"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_remover_produto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remover"
            android:onClick="remover"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</LinearLayout>
